force-app/main/default/objects/Reference_Larkspur_5500_Information__c/Reference_Larkspur_5500_Information__c.object-meta.xml
<CustomObject>
    <description>This object is used to store prior 5500 information provided by Larkspur</description>
    <label>Reference 5500 Information</label>
    <nameField>
        <displayFormat>Reference 5500-{000000}</displayFormat>
        <label>Reference 5500 Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reference 5500 Information</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>