force-app/main/default/objects/Reference_Larkspur_5500_Information__c/fields/ESOP__c.field-meta.xml
<CustomField>
    <fullName>ESOP__c</fullName>
    <label>ESOP</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>