force-app/main/default/objects/Reference_Larkspur_5500_Information__c/fields/Market_Type__c.field-meta.xml
<CustomField>
    <fullName>Market_Type__c</fullName>
    <label>Market Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Large Market</fullName>
            </value>
            <value>
                <fullName>Small Market</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>