force-app/main/default/objects/Reference_Larkspur_5500_Information__c/fields/Prospect_Client__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Client__c</fullName>
    <label>Prospect Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Reference_Larkspur_5500_Information</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>