force-app/main/default/objects/Reference_Larkspur_5500_Information__c/fields/Service_Provider_1_Position__c.field-meta.xml
<CustomField>
    <fullName>Service_Provider_1_Position__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Service Provider 1 Position</label>
    <length>128</length>
    <type>Text</type>
</CustomField>