force-app/main/default/objects/Reference_Larkspur_5500_Information__c/fields/Service_Provider_3_Relation__c.field-meta.xml
<CustomField>
    <fullName>Service_Provider_3_Relation__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Service Provider 3 Relation</label>
    <length>128</length>
    <type>Text</type>
</CustomField>