force-app/main/default/objects/Reference_Larkspur_5500_Information__c/recordTypes/Reference_Larkspur_5500_Information.recordType-meta.xml
<RecordType>
    <fullName>Reference_Larkspur_5500_Information</fullName>
    <active>true</active>
    <label>Reference Larkspur 5500 Information</label>
</RecordType>